crates/connectors/ndc-postgres/tests/snapshots/query_tests__predicates__select_where_name_eq.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 129,
        "Title": "Houses Of The Holy"
      }
    ]
  }
]
