crates/connectors/ndc-postgres/tests/snapshots/query_tests__predicates__select_where_name_in.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 346,
        "Title": "Mozart: Chamber Music"
      }
    ]
  }
]
