crates/connectors/ndc-postgres/tests/snapshots/query_tests__predicates__select_where_name_nilike.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "For Those About To Rock We Salute You"
      },
      {
        "Title": "Restless and Wild"
      },
      {
        "Title": "Let There Be Rock"
      },
      {
        "Title": "Big Ones"
      },
      {
        "Title": "Jagged Little Pill"
      }
    ]
  }
]
